# sepp-web-server

./: .gitignore  README.md  git-deploy.sh  pyproject.toml  requirements.txt  vercel.json
api/: index.py
app/: __init__.py  main.py
app/templates/: index.html
public/: index.html
public/css/: styles.css
public/js/: gallery.js
