[project]
name = "sepp-web-server"
version = "0.1.0"
description = "Sepp Web Server - Serviço de hospedagem de imagens"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "vercel>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.core"

[tool.uv]
dev-dependencies = []
